--- a/index.html
+++ b/index.html
@@ -19,6 +19,35 @@
         		<h1>Be happy, Block happy!</h1>
 				<p>Be happy<em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
+			<br>
+
+<div class="container">	
+<div id="instagram-feed-demo" class="instagram_feed"></div>
+</div>
+
+<script src="https://www.jqueryscript.net/demo/Instagram-Photos-Without-API-instagramFeed/jquery.instagramFeed.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script>
+ (function($){
+		$(window).on('load', function(){
+			$.instagramFeed({
+				'username': 'feelblockhappy',
+				'container': "#instagram-feed-demo",
+				'display_profile': true,
+				'display_biography': true,
+				'display_gallery': true,
+				'get_raw_json': false,
+				'callback': null,
+				'styling': true,
+				'items': 36,
+				'items_per_row': 6,
+				'margin': 0.3
+			});
+		});
+	})(jQuery);
+  </script>
+
+<br></br>
 		</div><!-- /.container -->
 		<footer>
     		<ul>
